--- a/.github/workflows/deployToGithubPage.yml
+++ b/.github/workflows/deployToGithubPage.yml
@@ -5,7 +5,7 @@ name: Github Pages
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master", "workflow_dispatch"]
 
 jobs:
   deploy:
@@ -13,7 +13,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-      
+
     - name: Setup Node.js
       uses: actions/setup-node@v3
 
