--- a/.github/workflows/deployToGithubPage.yml
+++ b/.github/workflows/deployToGithubPage.yml
@@ -5,7 +5,7 @@ name: Github Pages
 
 on:
   push:
-    branches: [ "master", "workflow_dispatch"]
+    branches: [ "master", "workflow", "workflow_dispatch"]
 
 jobs:
   deploy:
