--- a/.github/workflows/deployToGithubPage.yml
+++ b/.github/workflows/deployToGithubPage.yml
@@ -20,6 +20,14 @@ jobs:
     - name: Install Dependencies
       run: npm install
 
-    - name: Run tests
-      run: ng test
+    - name: Build
+      run: ng build
+
+    - name: Deploy
+      if: success()
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        github_token: ${{secrets.GITHUB_TOKEN}}
+        publish_dir: dist/vishal-rana2015.github.io
+        enable_jekyll: true
 
