Modified deploy workflow

--- a/.github/workflows/deployToGithubPage.yml
+++ b/.github/workflows/deployToGithubPage.yml
@@ -23,11 +23,15 @@ jobs:
     - name: Build
       run: npm run build
 
-    - name: Deploy
-      if: success()
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{secrets.GITHUB_TOKEN}}
-        publish_dir: dist/vishal-rana2015.github.io
-        enable_jekyll: true
+    - name: Deploy to Github Pages
+      GITHUB_TOKEN: ${{secrets.token}}
+      run: |
+      ls -als
+      echo $GITHUB_TOKEN
+      git config --global user.name "Vishal Rana"
+      git config --global user.email ranavishal2015@gmail.com
+      git clone --depth 1 --branch gh-pages https://x-access-token:${{GITHUB_TOKEN}}@github.com/VishalRana2015/GithubProfile.git gh-pages
+      cd gh-pages
+      rm -rf *
+
 
