--- a/.github/workflows/deployToGithubPage.yml
+++ b/.github/workflows/deployToGithubPage.yml
@@ -25,12 +25,13 @@ jobs:
 
     - name: Deploy to Github Pages
       env:
-        GITHUB_TOKEN: ${{secrets.token}}
+        TOKEN: ${{secrets.token}}
       run: |
+        echo ${{TOKEN}}
         ls -als
         git config --global user.name 'Vishal Rana'
         git config --global user.email ranavishal2015@gmail.com
-        git clone https://x-access-token:${{GITHUB_TOKEN}}@github.com/
+        git clone https://x-access-token:${{TOKEN}}@github.com/
         cd repo
         if git show-ref --verify --quiet refs/heads/gh-pages; then
           git checkout gh-pages
