Added buildDev and buildProd scripts to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "buildDev" : "ng build --configuration production --base-href https://VishalRana2015.github.io/GithubProfile/",
+    "buildProd" : "ng build --configuration production --base-href https://VishalRana2015.github.io/",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
