--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -41,14 +41,14 @@ jobs:
           cd GithubProfile
           npm run buildProd
 
-      - name: Copy build files 'dist/vishal-rana2015.github.io/browser/*' to VishalRana2015.github.io and push the changes to VishalRana2015.github.io repo at gh-pages branch.
+      - name: Copy build files 'GithubProfile/dist/vishal-rana2015.github.io/browser/*' to VishalRana2015.github.io and push the changes to VishalRana2015.github.io repo at gh-pages branch.
         run: |
           cd VishalRana2015.github.io
           git rm -r .
           git clean -fxd
-          echo "After cleaning everything"
+          echo "After cleaning VishalRana2015.github.io repo contents, listing the contents below. We should not get anything there."
           ls -als
-          echo "After printing the files"
+          echo "---------------------------------------------------------------------------------------------------------------"
           cp -r ../GithubProfile/dist/vishal-rana2015.github.io/browser/* .
           echo "After coyping the files"
           git add .
