--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -50,7 +50,8 @@ jobs:
           ls -als
           echo "---------------------------------------------------------------------------------------------------------------"
           cp -r ../GithubProfile/dist/vishal-rana2015.github.io/browser/* .
-          echo "After coyping the files"
+          echo "\n After coyping the files, listing the files"
+          ls -als
           git add .
           # Find out if there is anything to commit
           noCommitMsg="nothing to commit"
