--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -24,9 +24,9 @@ jobs:
         run: |
           git clone https://github.com/VishalRana2015/GithubProfile.git
 
-      - name: Clone VishalRana2015.github.io repo's code from 'master' branch
+      - name: Clone VishalRana2015.github.io repo's code from 'gh-pages' branch
         run: |
-          git clone https://github.com/VishalRana2015/VishalRana2015.github.io.git --branch master
+          git clone https://github.com/VishalRana2015/VishalRana2015.github.io.git --branch gh-pages
 
       - name: Setup Node.js
         uses: actions/setup-node@v3
