--- a/.github/workflows/deployProd.yml
+++ b/.github/workflows/deployProd.yml
@@ -46,11 +46,14 @@ jobs:
           cd VishalRana2015.github.io
           git rm -r .
           git clean -fxd
+          git add .
+          git commit -m "Empty Directory"
           echo "After cleaning VishalRana2015.github.io repo contents, listing the contents below. We should not get anything there."
           ls -als
           echo "---------------------------------------------------------------------------------------------------------------"
           cp -r ../GithubProfile/dist/vishal-rana2015.github.io/browser/* .
-          echo "After coyping the files"
+          echo "\n After coyping the files, listing the files"
+          ls -als
           git add .
           # Find out if there is anything to commit
           noCommitMsg="nothing to commit"
